# multitail

./: .gitignore  CMakeLists.txt  CMakelists.txt  Changes  GNUmakefile  INSTALL  LICENSE  Makefile  README  README.md  clipboard.c  clipboard.h  cmdline.c  cmdline.h  color.c  color.h  config.c  config.h  cv.c  cv.h  diff.c  diff.h  doassert.h  error.c  error.h  exec.c  exec.h  globals.c  globals.h  help.c  help.h  history.c  history.h  makefile.aix  makefile.cross-arm-linux  makefile.cygwin  makefile.hpux  makefile.icc  makefile.irix  makefile.macosx  (+38 more)
.github/: FUNDING.yml
.github/workflows/: build.yml
conversion-scripts/: colors-example.pl  colors-example.sh  convert-geoip.pl  convert-simple.pl
